# feishu_robert

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/db/: __init__.py  base.py
app/llm/: llm.py
app/mapper/: to_task_mapper.py
app/models/: __init__.py  employee.py  project.py  push.py  task.py  task_log.py
app/prompts/: task_parser_prompt.md
app/repositories/: mysql_client.py  project_repository.py  push_repository.py  task_repository.py  user_repository.py
app/schemas/: __init__.py  employee.py  feishu.py  graph.py  nlp.py  project.py  push.py  task.py  task_log.py
app/services/: employee_service.py  feishu_service.py  nlp_service.py  project_service.py  push_service.py  scheduler_service.py  speech_service.py  task_service.py
app/utils/: dependencies.py  logger.py
docker/: nginx.conf
docs/: CODE_GUIDE.md  DEPLOY.md  DESIGN.md  PRD.md
scripts/: feishu_ws_bot.py  init_db.sql  seed_demo_data.sql
