[project]
name = "smartrobert"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.1",
    "alembic>=1.17.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "lark-oapi>=1.6.5",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "asyncmy>=0.2.11",
    "loguru>=0.7.3",
    "langchain>=1.3.1",
    "datetime>=6.0",
    "langchain-openai>=1.2.2",
    "timedelta>=2020.12.3",
    "ffmpeg>=1.4",
    "cryptography>=48.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
